[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Character.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 31.8461 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.75, 31.5961 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31.75, 31.8461 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 31.5961 )

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AreaEnemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEnemy"]
shape = SubResource( 3 )

[node name="AreaGold" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaGold"]
shape = SubResource( 4 )

[node name="AreaDepression" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDepression"]
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AreaOctopus" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOctopus"]
shape = SubResource( 6 )

[connection signal="area_entered" from="AreaEnemy" to="." method="_on_Enemy_Colliding"]
[connection signal="area_entered" from="AreaGold" to="." method="_on_Gold_Colliding"]
[connection signal="area_entered" from="AreaDepression" to="." method="_on_depression_level"]
[connection signal="area_entered" from="AreaOctopus" to="." method="_on_Octopus_Colliding"]
